--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+.cards {
+    width: 300px;
+    height: 100%;
+    border: 1px solid black;
+    margin: 10px;
+}
