--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+header {
+    height: 100px;
+    background-color: #444444;
+    background-image: linear-gradient(#000000, #444444);
+}
+
+.logo-boolflix {
+    max-width: 100px;
+}
+
 .cards {
     width: 300px;
     height: 100%;
